[gd_scene load_steps=3 format=2]

[ext_resource path="res://nodes/gun/Gun.gd" type="Script" id=1]
[ext_resource path="res://nodes/gun/gunshot.wav" type="AudioStream" id=2]

[node name="Gun" type="Spatial"]
script = ExtResource( 1 )

[node name="FireTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.15
one_shot = true

[node name="BulletRayCast" type="RayCast" parent="."]
exclude_parent = false
cast_to = Vector3( 100, 0, 0 )

[node name="GunshotPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
